<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/c_ff2f2f2f"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/findpassword_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/iar_title_arrows"
        android:drawablePadding="7.0dip"
        android:gravity="center_vertical"
        android:paddingBottom="20.0dip"
        android:paddingLeft="7.0dip"
        android:paddingTop="20.0dip"
        android:text="@string/find_password_new"
        android:textColor="@color/c_ffffffff"
        android:textSize="16.0dip" />

    <AutoCompleteTextView
        android:id="@+id/findpassword_email"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:background="@drawable/register_input_group_bgdrw"
        android:completionThreshold="1"
        android:hint="@string/please_enter_your_regitered_email_add"
        android:paddingLeft="11.0dip"
        android:paddingRight="11.0dip"
        android:singleLine="true"
        android:textColor="@color/c_ff000000"
        android:textColorHint="@color/c_ff8c8c8c"
        android:textSize="15.0dip" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7.0dip"
        android:layout_marginLeft="9.0dip"
        android:layout_marginRight="9.0dip"
        android:layout_marginTop="7.0dip"
        android:text="@string/find_password_directions"
        android:textColor="@color/c_ffc4c4c4"
        android:textSize="12sp" />

    <Button
        android:id="@+id/findpassword_reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:layout_marginTop="29.0dip"
        android:background="@drawable/register_findpsw_btn"
        android:padding="7.0dip"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="15.0dip" />

</LinearLayout>